--- a/params.yaml
+++ b/params.yaml
@@ -17,3 +17,10 @@ split_data:
 
 model_dir: saved_models
 webapp_model_dir: prediction_service/model/model.pkl
+
+mlflow_config:
+  artifacts_dir: artifacts
+  experiment_name: IRIS-Classification
+  tracking_uri: http://localhost:1234/
+  run_name: mlops
+  registered_model_name: SVCModel
