--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,7 +2,6 @@ stages:
   load_data:
     cmd: python src/load_and_process.py --config=params.yaml
     deps:
-    - params.yaml
     - src/get_data.py
     - src/load_and_process.py
     - data_given/iris.data
@@ -26,11 +25,11 @@ stages:
     - data/processed/train.data
     - data/processed/test.data
     - src/train.py
-    outs:
-    - saved_models/model.pkl
   
   log_production_model:
     cmd: python src/log_production_model.py --config=params.yaml
     deps:
     - src/train.py
     - src/log_production_model.py
+    outs:
+    - saved_models/model.joblib
