--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,12 +29,26 @@ jobs:
     - name: Test with Pytest
       run: |
         pytest -v
-      
-    - name: Deploy to HEROKU
+    
+    - name: Docker Login
       env:
-        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-        HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-      if: github.ref == 'refs/heads/main' && job.status == 'success'
+        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
-        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
-        git push heroku HEAD:main -f
+        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+
+    - name: Building Docker Image
+      run: |
+        docker build . --file Dockerfile --tag vishnunagineni/iriscicd
+    - name: Pushing docker image
+      run: |
+        docker push ${{secrets.DOCKER_USERNAME}}/iriscicd
+
+    # - name: Deploy to HEROKU
+    #   env:
+    #     HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+    #     HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+    #   if: github.ref == 'refs/heads/main' && job.status == 'success'
+    #   run: |
+    #     git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
+    #     git push heroku HEAD:main -f
